--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@formkit/auto-animate": "^0.8.2",
+		"ouml": "^0.2.0",
+		"sass-embedded": "^1.79.4"
+	}
 }
