--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^2.0.0"
+		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/kit": "^2.6.2",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"svelte": "5.0.0-next.262",
+		"svelte-check": "^4.0.4",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.8",
+		"vitest": "^2.1.2"
 	},
 	"type": "module",
 	"dependencies": {
