--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "none",
+	"arrowParens": "avoid",
 	"semi": false,
 	"experimentalTernaries": true,
 	"printWidth": 80,
